# rsipstack

./: .gitignore  0001-My-changes.patch  Cargo.toml  IMPLEMENTATION_COMPLIANCE_REPORT.md  README.md  RFC3261_OUTBOUND_PROXY_IMPLEMENTATION.md
.github/workflows/: ci.yml
examples/: proxy.rs
examples/client/: main.rs  play_file.rs  stun.rs
examples/sip-caller/: TRANSPORT_FROM_URI.md  config.rs  main.rs  rtp.rs  sip_client.rs  sip_dialog.rs  sip_transport.rs  utils.rs
src/: error.rs  lib.rs  rsip_ext.rs
src/dialog/: authenticate.rs  client_dialog.rs  dialog.rs  dialog_layer.rs  invitation.rs  mod.rs  publication.rs  registration.rs  server_dialog.rs  subscription.rs
src/dialog/tests/: mod.rs  test_authenticate.rs  test_client_dialog.rs  test_dialog_layer.rs  test_dialog_states.rs  test_prack.rs  test_server_dialog.rs  test_sub_pub.rs
src/resolver/: mod.rs  sip_resolver.rs
src/sip/: error.rs  message.rs  method.rs  mod.rs  parser.rs  services.rs  status_code.rs  transport.rs  uri.rs  version.rs
src/sip/headers/: auth.rs  mod.rs  untyped.rs
src/sip/headers/typed/: allow.rs  authorization.rs  contact.rs  cseq.rs  from.rs  identity.rs  mod.rs  parse_helpers.rs  proxy_authenticate.rs  proxy_authorization.rs  record_route.rs  route.rs  to.rs  tokenizers.rs  via.rs  www_authenticate.rs
src/transaction/: endpoint.rs  key.rs  message.rs  mod.rs  timer.rs  transaction.rs
src/transaction/tests/: mod.rs  test_before_send.rs  test_client.rs  test_endpoint.rs  test_provisional_responses.rs  test_server.rs  test_server_invite_drop.rs  test_transaction_states.rs
src/transport/: channel.rs  connection.rs  mod.rs  sip_addr.rs  stream.rs  tcp.rs  tcp_listener.rs  tls.rs  transport_layer.rs  udp.rs  websocket.rs
src/transport/tests/: mod.rs  test_listener_api.rs  test_sipaddr.rs  test_stream_encoding.rs  test_tls_reload.rs  test_udp.rs  test_via_received.rs
tests/: outbound_proxy_test.rs
